Fixed mobile spacing Fixed index summary

--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -37,7 +37,8 @@ select {
 	display: flex;
 	flex-grow: 3;
 	justify-content: center;
-	margin: 1.5rem 0.5rem;
+	margin-bottom: 1rem;
+	margin-top: 1rem;
 	max-height: 100%;
 	position: relative;
 
@@ -45,13 +46,22 @@ select {
 		display: none;
 	}
 
+	&__scroll {
+		width: 100%;
+		
+		&--middle {
+			align-items: center;
+			display: flex;
+		}
+	}
+
 	@include media-min(lg) {
-		margin: $main-padding 3rem;
+		margin-bottom: $main-padding;
+		margin-top: $main-padding;
 
 		&__scroll {
 			height: 100%;
 			overflow-y: scroll;
-			width: 100%;
 			
 			&::-webkit-scrollbar {
 				display: none;
